# gidle-lyricbot

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  README.txt  banner.txt  raw
crates/bot/: Cargo.toml
crates/bot/src/: banner.rs  healthcheck.rs  main.rs
crates/lyrics/: Cargo.toml  build.rs
crates/lyrics/raw/: $$$.txt  already.txt  blow-your-mind.txt  change.txt  dahlia.txt  dark-x-file.txt  dont-text-me.txt  dumdi-dumdi.txt  escape.txt  for-you.txt  give-me-your.txt  hann-alone-in-winter.txt  hann-alone.txt  hear-me.txt  help-me.txt  hwaa.txt  im-the-trend.txt  last-dance.txt  latata.txt  liar.txt  light-my-fire.txt  lion.txt  lost.txt  love.txt  luv-v.txt  maybe.txt  maze.txt  moon.txt  more.txt  my-bag.txt  never-stop-me.txt  nxde.txt  oh-my-god.txt  polaroid.txt  pop-stars.txt  put-it-straight.txt  relay.txt  reset.txt  sculpture.txt  senorita.txt  (+9 more)
crates/lyrics/src/: lib.rs
crates/oauth-gen/: Cargo.toml
crates/oauth-gen/src/: main.rs
