[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
include.workspace = true
name = "lyrics"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.17.0"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }

[build-dependencies]
anyhow = "1.0.68"
itertools = "0.10.5"
regex = "1.7.1"
serde = { version = "1.0.152", features = ["derive"] }
uneval = "0.2.4"
