[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
include.workspace = true
name = "oauth-gen"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
dotenvy = "0.15.6"
oauth1 = "1.0.0"
